Added 2 functions to export. Necessary for some functionality to work.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,3 +24,5 @@ export(set.utilities.aggressive)
 export(set.utilities.cautious)
 export(set.utilities.simple)
 export(setUtilitySliderValues)
+export(load.and.replot.images)
+export(probLineCallback)
