--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@ importFrom(utils, data, menu, read.delim, select.list)
 export(DUErestart)
 export(DUEstart)
 export(DUEstop)
+export(plotProbsAndEUsimplified)
 export(FromLognormalToNormal)
 export(FromNormalToLognormal)
 export(add)
