--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,7 @@ importFrom(utils, data, menu, read.delim, select.list)
 export(DUErestart)
 export(DUEstart)
 export(DUEstop)
-export(plotProbsAndEUsimplified)
+export(plotProbsAndEU)
 export(FromLognormalToNormal)
 export(FromNormalToLognormal)
 export(add)
