--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(DUErestart)
 export(DUEstart)
 export(DUEstop)
 export(plotProbsAndEU)
+export(plotProbsAndEUsimplified)
 export(FromLognormalToNormal)
 export(FromNormalToLognormal)
 export(add)
