Updated DESCRIPTION date&version... included Marie Gerges

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,12 @@
 Package: DUE
 Type: Package
 Title: Dose Utility Explorer
-Version: 0.30
-Date: 2015-04-13
-Author: Roger Day, Meihua Wang
+Version: 0.41
+Date: 2017-06-30
+Author: Roger Day, Meihua Wang, Marie Gerges
 Maintainer: Roger Day <day01@pitt.edu>
 Description: Interactive environment for exploring relationships between priors, utilities, and choice of dose, when toxicity and response are determined by patient-specific thresholds.  Good for mixture models.
 Depends: utils, mvtnorm, tcltk, tkrplot
+Suggests: shiny, shinyBS, shinyDebuggingPanel
 License: GPL-2
 LazyLoad: yes
