--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,7 @@ Date: 2017-07-29
 Author: Roger Day, Meihua Wang, Marie Gerges
 Maintainer: Roger Day <day01@pitt.edu>
 Description: Interactive environment for exploring relationships between priors, utilities, and choice of dose, when toxicity and response are determined by patient-specific thresholds.  Good for mixture models.
-Depends: utils, mvtnorm, tcltk, tkrplot
-Suggests: shiny, shinyBS, shinyDebuggingPanel
+Depends: utils, mvtnorm, tcltk, tkrplot, shinyDebuggingPanel
+Suggests: shiny, shinyBS
 License: GPL-2
 LazyLoad: yes
