--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,26 @@
 Package: DUE
 Type: Package
 Title: Dose Utility Explorer
-Version: 0.54
-Date: 2017-08-06
+Version: 0.55
+Date: 2017-08-08
 Author: Roger Day, Meihua Wang, Marie Gerges
 Maintainer: Roger Day <day01@pitt.edu>
-Description: Interactive environment for exploring relationships between priors, utilities, and choice of dose, when toxicity and response are determined by patient-specific thresholds.  Good for mixture models.
-Depends: utils, mvtnorm, tcltk, tkrplot, shinyDebuggingPanel
-Suggests: shiny, shinyBS
+Description: Interactive environment for exploring relationships between priors,
+    utilities, and choice of dose, when toxicity and response are determined by
+    patient-specific thresholds. Good for mixture models.
+Depends:
+    utils,
+    mvtnorm,
+    tcltk,
+    tkrplot,
+    shinyDebuggingPanel
+Suggests:
+    shiny,
+    shinyBS,
+    rmarkdown,
+    knitr
 License: GPL-2
 Copyright: Roger Day, Marie Gerges, Meihua Wang
 LazyLoad: yes
+VignetteBuilder: knitr
+RoxygenNote: 5.0.1
