--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,11 @@ Rplots.pdf
 man
 packrat/lib*/
 packrat
+NOTES on DUE fiddling, 2024-01-09.rtf
+PKPD_meeting_Lee_Day.pdf
+logo.html
+prevent Chrome from putting tabs to sleep.html
+.gitignore
+newFile.tscproj
+DUE face and audio
+DUE tour video
